tests/ui/borrowck/move-error-in-promoted-2.stderr
error[E0508]: cannot move out of type `[S; 1]`, a non-copy array
  --> $DIR/move-error-in-promoted-2.rs:6:7
   |
LL |     &([S][0],);
   |       ^^^^^^
   |       |
   |       cannot move out of here
   |       move occurs because value has type `S`, which does not implement the `Copy` trait
   |
note: if `S` implemented `Clone`, you could clone the value
  --> $DIR/move-error-in-promoted-2.rs:3:1
   |
LL | struct S;
   | ^^^^^^^^ consider implementing `Clone` for this type
...
LL |     &([S][0],);
   |       ------ you could clone this value

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0508`.
